--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 </head>
 <body>
     <!--Barra de navegacion-->
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbar-toggler">
+          <div class="collapse navbar-collapse d-flex" id="navbar-toggler">
             <a class="navbar-brand" href="#"><img class="logo-portafolio" src="imagenes/icono.png" width="50" alt="logo de la pagina web"></a>
             <ul class="navbar-nav d-flex justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Sobre mi</a>
+                <a class="nav-link" aria-current="page" href="#sobre-mi">Sobre mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Proyectos</a>
@@ -54,22 +54,27 @@
     </nav>
     
     <!-- Seccion Hero -->
-    <section class="hero align-items-stretch">
-      <div class="hero-principal">
-        <img class="hero-imagen-perfil" src="./imagenes/miFoto.jpeg" alt="foto Agustin">
-        <h1>¡HOLA, Soy Agustin Arnedo!</h1>
-        <h2>Desarrollador Web | Ingeniería Civil</h2>
-      </div>
-      <div class="hero-inferior">
-        <img class="hero-inferior-imagen img-fluid" src="./imagenes/hero-inferior-imagen.svg" alt="Computadora con logos HTML CSS JS">
+    <section class="hero align-items-center">
+      <div class="hero-principal align-items-center">
+        <div class="card d-flex align-items-center justify-content-center" style="width: 35rem;">
+          <img class="hero-imagen-perfil" src="./imagenes/miFoto.jpeg" alt="foto Agustin">
+          <div class="card-body">
+          <h1>¡HOLA, Soy Agustin Arnedo!</h1>
+          <h2>Desarrollador Web | Ingeniería Civil</h2>
+          </div>
+        </div> 
       </div>
     </section>
 
     <!-- Sobre Mi -->
-    <section class="sobre-mi seccion-oscura">
+    <section class="sobre-mi seccion-oscura" id="sobre-mi">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Agustin:</h2>
-        <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla possimus modi sit culpa eos exercitationem, necessitatibus iste consectetur amet nobis sunt illum ducimus dolor minus odio beatae laudantium! Iste, sunt?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi, fuga. Molestias ab itaque ut soluta ex corporis repudiandae in odit, maxime nam voluptas est laborum minima porro laudantium aperiam quis.</p>
+        <p class="seccion-texto"> Soy <b>Agustín Arnedo</b>, tengo 27 años, soy de La Rioja, Argentina y actualmente soy alumno avanzado de Ingeniería Civil en UTN Facultad Regional La Rioja.<br>
+        Hace mas de 1 año comencé a interesarme en el mundo IT y cada día me estoy perfeccionando a través de Cursos Online.<br>
+        Desde muy chico que estoy familiarizado con las computadoras y la Programación se convirtió en uno de mis objetivos de vida, actualmente me interesa mucho la parte Front-End basada en el Desarrollo Web pero mi deseo es convertirme en Full-Stack siendo versátil y capaz de abordar diferentes áreas del desarrollo de software para crear aplicaciones y sistemas bien completos.<br><br>
+        <b>Aprendo muy rápido y más si disfruto hacerlo, siempre poniendo lo máximo de mi, perfeccionando mis habilidades adquiridas en la Ingeniería.</b>
+          </p>
       </div>
     </section>
 
@@ -83,10 +88,10 @@
             <p class="experiencia-titulo">Desarrollo Web</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fuga dolorem architecto nam sapiente? Nisi quo possimus quisquam fugiat error architecto, ipsam neque corporis eius minima rem ad, maiores quasi!</p>
             <div class="badges-contenedor">
-              <span class="badge text-bg-primary">HTML</span>
-              <span class="badge text-bg-primary">CSS</span>
-              <span class="badge text-bg-primary">JavaScript</span>
-              <span class="badge text-bg-primary">React</span>
+              <span class="badge text-bg-light">HTML</span>
+              <span class="badge text-bg-light">CSS</span>
+              <span class="badge text-bg-light">JavaScript</span>
+              <span class="badge text-bg-light">Bootstrap</span>
             </div>
           </div>
           <!-- Articulos -->
@@ -95,9 +100,9 @@
             <p class="experiencia-titulo">Articulos</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fuga dolorem architecto nam sapiente? Nisi quo possimus quisquam fugiat error architecto, ipsam neque corporis eius minima rem ad, maiores quasi!</p>
             <div class="badges-contenedor">
-              <span class="badge text-bg-primary">Escribir</span>
-              <span class="badge text-bg-primary">Editar</span>
-              <span class="badge text-bg-primary">Blogs</span>
+              <span class="badge text-bg-light">Escribir</span>
+              <span class="badge text-bg-light">Editar</span>
+              <span class="badge text-bg-light">Blogs</span>
             </div>
           </div>
           <!-- Estudiante -->
@@ -106,9 +111,9 @@
             <p class="experiencia-titulo">Estudios</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fuga dolorem architecto nam sapiente? Nisi quo possimus quisquam fugiat error architecto, ipsam neque corporis eius minima rem ad, maiores quasi!</p>
             <div class="badges-contenedor">
-              <span class="badge text-bg-primary">FreeCodeCamp</span>
-              <span class="badge text-bg-primary">Arg.Programa 4.0</span>
-              <span class="badge text-bg-primary">Phyton</span>
+              <span class="badge text-bg-light">UTN</span>
+              <span class="badge text-bg-light">ARG.Programa 4.0</span>
+              <span class="badge text-bg-light">Cursos Online</span>
             </div>
           </div>
         </div>
