--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
                 <a class="nav-link" aria-current="page" href="#sobre-mi">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Proyectos</a>
+                <a class="nav-link" href="#proyectos">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Testimonios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="#contactos">Contacto</a>
               </li>
             </ul>
           </div>
@@ -60,7 +57,7 @@
           <img class="hero-imagen-perfil" src="./imagenes/miFoto.jpeg" alt="foto Agustin">
           <div class="card-body">
           <h1>¡HOLA, Soy Agustin Arnedo!</h1>
-          <h2>Desarrollador Web | Ingeniería Civil</h2>
+          <h2>Desarrollador Web | Training-Junior</h2>
           </div>
         </div> 
       </div>
@@ -78,51 +75,57 @@
       </div>
     </section>
 
-    <!-- Experiencia -->
-    <section class="experiencia seccion-clara">
-      <div class="container text-center">
-        <div class="row">
-          <!-- Desarrollo Web -->
-          <div class="columna col-12 col-md-4">
-            <i class="bi bi-laptop"></i>
-            <p class="experiencia-titulo">Desarrollo Web</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fuga dolorem architecto nam sapiente? Nisi quo possimus quisquam fugiat error architecto, ipsam neque corporis eius minima rem ad, maiores quasi!</p>
-            <div class="badges-contenedor">
-              <span class="badge text-bg-light">HTML</span>
-              <span class="badge text-bg-light">CSS</span>
-              <span class="badge text-bg-light">JavaScript</span>
-              <span class="badge text-bg-light">Bootstrap</span>
-            </div>
-          </div>
-          <!-- Articulos -->
-          <div class="columna col-12 col-md-4">
-            <i class="bi bi-stack"></i>
-            <p class="experiencia-titulo">Articulos</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fuga dolorem architecto nam sapiente? Nisi quo possimus quisquam fugiat error architecto, ipsam neque corporis eius minima rem ad, maiores quasi!</p>
-            <div class="badges-contenedor">
-              <span class="badge text-bg-light">Escribir</span>
-              <span class="badge text-bg-light">Editar</span>
-              <span class="badge text-bg-light">Blogs</span>
-            </div>
-          </div>
-          <!-- Estudiante -->
-          <div class="columna col-12 col-md-4">
-            <i class="bi bi-mortarboard"></i>
-            <p class="experiencia-titulo">Estudios</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fuga dolorem architecto nam sapiente? Nisi quo possimus quisquam fugiat error architecto, ipsam neque corporis eius minima rem ad, maiores quasi!</p>
-            <div class="badges-contenedor">
-              <span class="badge text-bg-light">UTN</span>
-              <span class="badge text-bg-light">ARG.Programa 4.0</span>
-              <span class="badge text-bg-light">Cursos Online</span>
-            </div>
-          </div>
-        </div>
-      </div>
+    <!-- Skilles -->
+    <section class="skill seccion-clara">
+        <div class="skill-container text-center">
+          <div class="skill-titulo">
+            <h2>Habilidades</h2>
+          </div>          
+              <div class="logos col-sm col-md-9 col-lg-12">
+                <img src="./imagenes/icono-html.png" alt="">
+                <img src="./imagenes/icono-css.png" alt="">
+                <img src="./imagenes/icono-js.png" alt="">
+              </div>      
+        </div>     
     </section>
 
     <!-- Proyectos -->
-    <section>
-      
+    <section class="proyectos" id="proyectos">
+      <h2 class="proyectos-titulo">
+        Proyectos
+      </h2>
+      <div class="proyectos-container">
+        <div class="card-proyecto">
+          <div class="card-content">
+            <a href="https://gustoporviajar.netlify.app/" target="_blank">
+            <h3>PROYECTO LANDING PAGE | gustoPorViajar</h3>
+            <p>ArgentinaPrograma 4.0 | Grupo N°2</p>
+            </a>           
+          </div>
+        </div> 
+      </div>
+    </section>
+
+    <!-- Contactos -->
+    <section class="contactos" id="contactos">
+      <div class="contactos-container">
+        <h2 class="contactos-titulo">
+          Para Contactarme:
+        </h3>
+        <div class="contactos-content">
+          <div class="contacto-redes">
+            <a href="https://www.instagram.com/arnedoagustin/">
+              <img src="./imagenes/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com/in/agustinarnedo/">
+              <img src="./imagenes/linkedin.svg" alt="Linkedin">
+            </a>
+            <a href="https://github.com/AArnedo">
+             <img src="./imagenes/github.svg" alt="GitHub">
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
 
