--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--Barra de navegacion-->
+    <!--Barra de navegacion y Hero-->
+  <header>
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,14 +49,16 @@
           </div>
         </div>
     </nav>
-
-    <!-- Seccion Hero -->
     <section class="hero-container">
-      <h1>¡BIENVENIDO!<br>Soy Arnedo Agustin</h1>
+      <div class="txt-hero">
+        <h1>Web Developer | Arnedo Agustin</h1>
+      </div>
     </section>
+  </header>
 
     <!-- Sobre Mi -->
-    <section id="sobre-mi">
+    <section class="sm" id="sobre-mi">
+      <h1>Sobre Mi</h1>
     <div class="sm-contenedor container">
       <div class="card-contenedor">
         <div class="card">
@@ -78,16 +81,14 @@
     </section>
 
     <!-- Skilles -->
-    <section class="skill seccion-clara">
+    <section class="skill">
         <div class="skill-container text-center">
           <div class="skill-titulo">
-            <h2>Habilidades</h2>
-          </div>          
-              <div class="logos col-sm col-md-9 col-lg-12 mb-5">
-                <img src="./imagenes/icono-html.png" alt="">
-                <img src="./imagenes/icono-css.png" alt="">
-                <img src="./imagenes/icono-js.png" alt="">
-              </div>      
+            <h2>Mis Habilidades</h2>
+          </div>
+          <div class="circulo-skill"></div>
+
+              
         </div>    
     </section>
 
@@ -148,5 +149,6 @@
 
     <!--Bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="./script.js"></script>
 </body>
 </html>
